edit database accourding to change in ui
